カウントダウン追加

--- a/control.html
+++ b/control.html
@@ -50,12 +50,19 @@
 			</div>
 		</div>
 		<div class="col-xs-12">
-			<div class="btn-group input-group btn-group-justified" role="group">
-				<a class="btn btn-default btn-lg" href="#" id ="reset">RESET</a>
-				<a class="btn btn-default btn-lg" href="#" id="start">START</a>
-				<a class="btn btn-default btn-lg" href="#" id="stop">STOP</a>
+			<div class="form-group">
+				<div class="btn-group input-group btn-group-justified" role="group">
+					<a class="btn btn-default btn-lg" href="#" id ="reset">RESET</a>
+					<a class="btn btn-default btn-lg" href="#" id="start">START</a>
+					<a class="btn btn-default btn-lg" href="#" id="stop">STOP</a>
+				</div>
 			</div>
-			<a class="btn btn-default btn-lg" href="#" id="countup">COUNTUP</a>
+			<div class="form-group">
+				<div class="btn-group input-group btn-group-justified" role="group">
+					<a class="btn btn-default btn-lg" href="#" id="countup">COUNTUP</a>
+					<a class="btn btn-default btn-lg" href="#" id="countdown">COUNTDOWN</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
