twitter検索機能強化

--- a/control.html
+++ b/control.html
@@ -64,6 +64,16 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-xs-12">
+			<div class="form-group">
+				<div class="input-group">
+					<input type="text" class="form-control input-lg" id="search" placeholder="Twitter検索">
+					<span class="input-group-btn">
+						<a class="btn btn-default btn-lg btn-block" href="#" id="twitter">Stream</a>
+					</span>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
