--- a/control.html
+++ b/control.html
@@ -30,25 +30,26 @@
 </nav>
 <div class="container">
 	<div class="row">
-		<div class="col-xs-12">
-			<div class="row">
-				<div class="col-xs-4">
-					<div class="form-group">
-						<input type="number" id="hour" name="hour" min="0" value="0" class="form-control input-lg">
-					</div>
-				</div>
-				<div class="col-xs-4">
-					<div class="form-group">
-						<input type="number" id="min" name="min" min="0" max="59" value="0" class="form-control input-lg">
-					</div>
-				</div>
-				<div class="col-xs-4">
-					<div class="form-group">
-						<input type="number" id="sec" name="sec" min="0" max="59" value="0" class="form-control input-lg">
-					</div>
-				</div>
+		<div class="col-xs-4">
+			<div class="form-group">
+				<label class="control-label">予鈴時間</label>
+				<input type="number" id="first" name="first" min="0" max="99" value="0" class="form-control input-lg">
 			</div>
 		</div>
+		<div class="col-xs-4">
+			<div class="form-group">
+				<label class="control-label">発表時間</label>
+				<input type="number" id="end" name="end" min="0" max="99" value="0" class="form-control input-lg">
+			</div>
+		</div>
+		<div class="col-xs-4">
+			<div class="form-group">
+				<label class="control-label">討論時間</label>
+				<input type="number" id="discussion" name="discussion" min="0" max="99" value="0" class="form-control input-lg">
+			</div>
+		</div>
+	</div>
+	<div class="row">
 		<div class="col-xs-12">
 			<div class="form-group">
 				<div class="btn-group input-group btn-group-justified" role="group">
@@ -57,12 +58,12 @@
 					<a class="btn btn-default btn-lg" href="#" id="stop">STOP</a>
 				</div>
 			</div>
-			<div class="form-group">
+			<!-- <div class="form-group">
 				<div class="btn-group input-group btn-group-justified" role="group">
 					<a class="btn btn-default btn-lg" href="#" id="countup">COUNTUP</a>
 					<a class="btn btn-default btn-lg" href="#" id="countdown">COUNTDOWN</a>
 				</div>
-			</div>
+			</div> -->
 		</div>
 		<div class="col-xs-12">
 			<div class="form-group">
