--- a/control.html
+++ b/control.html
@@ -30,22 +30,22 @@
 </nav>
 <div class="container">
 	<div class="row">
-		<div class="col-xs-4">
+		<div class="col-xs-6">
 			<div class="form-group">
 				<label class="control-label">予鈴時間</label>
-				<input type="number" id="first" name="first" min="0" max="99" value="0" class="form-control input-lg">
+				<div class="input-group">
+					<input type="number" id="first" name="first" min="0" max="99" value="0" class="form-control input-lg">
+					<span class="input-group-addon">分</span>
+				</div>
 			</div>
 		</div>
-		<div class="col-xs-4">
+		<div class="col-xs-6">
 			<div class="form-group">
 				<label class="control-label">発表時間</label>
-				<input type="number" id="end" name="end" min="0" max="99" value="0" class="form-control input-lg">
-			</div>
-		</div>
-		<div class="col-xs-4">
-			<div class="form-group">
-				<label class="control-label">討論時間</label>
-				<input type="number" id="discussion" name="discussion" min="0" max="99" value="0" class="form-control input-lg">
+				<div class="input-group">
+					<input type="number" id="end" name="end" min="0" max="99" value="0" class="form-control input-lg">
+					<span class="input-group-addon">分</span>
+				</div>
 			</div>
 		</div>
 	</div>
