終わった時の銅鑼音を追加

--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
 
 <canvas id="game"></canvas>
 
+<ul>
+	<li><a href="http://www.freesound.org/people/juskiddink/sounds/86773/">Gong.wav is CC BY 3.0 License by juskiddink</a></li>
+</ul>
+
 <iframe src="/control" style="position: fixed; top: 10px; right: 10px; width: 360px; height: 500px;"></iframe>
+
+
 
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="/lib/jquery-1.11.2.js"></script>
 <script type="text/javascript" src="/lib/easeljs-0.8.0.combined.js"></script>
 <script type="text/javascript" src="/lib/preloadjs-0.6.0.combined.js"></script>
+<script type="text/javascript" src="/lib/soundjs-0.6.0.combined.js"></script>
 <script type="text/javascript" src="/lib/tweenjs-0.6.0.combined.js"></script>
 <script type="text/javascript" src="/client/timer.js"></script>
 
