--- a/control.html
+++ b/control.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Presen Timer Control(Scoket.io)</title>
-	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+	<link href="bower_components/Honoka/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -65,27 +65,17 @@
 				</div>
 			</div> -->
 		</div>
-		<div class="col-xs-12">
-			<div class="form-group">
-				<div class="input-group">
-					<input type="text" class="form-control input-lg" id="search" placeholder="Twitter検索">
-					<span class="input-group-btn">
-						<a class="btn btn-default btn-lg btn-block" href="#" id="twitter">Stream</a>
-					</span>
-				</div>
-			</div>
-		</div>
 	</div>
 </div>
 
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-<script type="text/javascript" src="/lib/jquery-1.11.2.js"></script>
-<script type="text/javascript" src="/lib/easeljs-0.8.0.combined.js"></script>
-<script type="text/javascript" src="/lib/preloadjs-0.6.0.combined.js"></script>
-<script type="text/javascript" src="/lib/tweenjs-0.6.0.combined.js"></script>
+<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="bower_components/EaselJS/lib/easeljs-0.8.0.combined.js"></script>
+<script type="text/javascript" src="bower_components/PreloadJS/lib/preloadjs-0.6.0.combined.js"></script>
+<script type="text/javascript" src="bower_components/TweenJS/lib/tweenjs-0.6.0.combined.js"></script>
 <script type="text/javascript" src="/client/control.js"></script>
 
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="bower_components/Honoka/dist/js/bootstrap.min.js"></script>
 
 </body>
 </html>
