--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 <iframe src="/control" style="position: fixed; top: 10px; right: 10px; width: 360px; height: 500px;"></iframe>
 
 
-
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-<script type="text/javascript" src="/lib/jquery-1.11.2.js"></script>
-<script type="text/javascript" src="/lib/easeljs-0.8.0.combined.js"></script>
-<script type="text/javascript" src="/lib/preloadjs-0.6.0.combined.js"></script>
-<script type="text/javascript" src="/lib/soundjs-0.6.0.combined.js"></script>
-<script type="text/javascript" src="/lib/tweenjs-0.6.0.combined.js"></script>
+<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="bower_components/EaselJS/lib/easeljs-0.8.0.combined.js"></script>
+<script type="text/javascript" src="bower_components/PreloadJS/lib/preloadjs-0.6.0.combined.js"></script>
+<script type="text/javascript" src="bower_components/SoundJS/lib/soundjs-0.6.0.combined.js"></script>
+<script type="text/javascript" src="bower_components/TweenJS/lib/tweenjs-0.6.0.combined.js"></script>
 <script type="text/javascript" src="/client/timer.js"></script>
 
 </body>
