適当なコミット

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 	<li><a href="http://www.freesound.org/people/juskiddink/sounds/86773/">Gong.wav is CC BY 3.0 License by juskiddink</a></li>
 </ul>
 
-<iframe src="/control" style="position: fixed; top: 10px; right: 10px; width: 360px; height: 500px;"></iframe>
+<a id="qrcode"></a>
 
+<!-- <iframe src="/control" style="position: fixed; top: 10px; right: 10px; width: 360px; height: 500px;"></iframe> -->
 
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="bower_components/qrcodejs/qrcode.min.js"></script>
 <script type="text/javascript" src="bower_components/EaselJS/lib/easeljs-0.8.0.combined.js"></script>
 <script type="text/javascript" src="bower_components/PreloadJS/lib/preloadjs-0.6.0.combined.js"></script>
 <script type="text/javascript" src="bower_components/SoundJS/lib/soundjs-0.6.0.combined.js"></script>
