--- a/control.html
+++ b/control.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Presen Timer Control(Scoket.io)</title>
-	<link href="bower_components/Honoka/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="bower_components/Honoka/dist/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
 
@@ -32,18 +32,18 @@
 	<div class="row">
 		<div class="col-xs-6">
 			<div class="form-group">
-				<label class="control-label">予鈴時間</label>
+				<label class="control-label">発表時間</label>
 				<div class="input-group">
-					<input type="number" id="first" name="first" min="0" max="99" value="0" class="form-control input-lg">
+					<input type="number" id="end" name="end" min="0" max="99" value="0" class="form-control input-lg">
 					<span class="input-group-addon">分</span>
 				</div>
 			</div>
 		</div>
 		<div class="col-xs-6">
 			<div class="form-group">
-				<label class="control-label">発表時間</label>
+				<label class="control-label">予鈴時間</label>
 				<div class="input-group">
-					<input type="number" id="end" name="end" min="0" max="99" value="0" class="form-control input-lg">
+					<input type="number" id="first" name="first" min="0" max="99" value="0" class="form-control input-lg">
 					<span class="input-group-addon">分</span>
 				</div>
 			</div>
@@ -53,9 +53,9 @@
 		<div class="col-xs-12">
 			<div class="form-group">
 				<div class="btn-group input-group btn-group-justified" role="group">
-					<a class="btn btn-default btn-lg" href="#" id ="reset">RESET</a>
 					<a class="btn btn-default btn-lg" href="#" id="start">START</a>
 					<a class="btn btn-default btn-lg" href="#" id="stop">STOP</a>
+					<a class="btn btn-default btn-lg" href="#" id ="reset">RESET</a>
 				</div>
 			</div>
 			<!-- <div class="form-group">
