--- a/control.html
+++ b/control.html
@@ -30,7 +30,7 @@
 </nav>
 <div class="container">
 	<div class="row">
-		<div class="col-xs-6">
+		<div class="col-xs-4">
 			<div class="form-group">
 				<label class="control-label">発表時間</label>
 				<div class="input-group">
@@ -39,11 +39,20 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-6">
+		<div class="col-xs-4">
 			<div class="form-group">
 				<label class="control-label">予鈴時間</label>
 				<div class="input-group">
 					<input type="number" id="first" name="first" min="0" max="99" value="0" class="form-control input-lg">
+					<span class="input-group-addon">分</span>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-4">
+			<div class="form-group">
+				<label class="control-label">質問時間</label>
+				<div class="input-group">
+					<input type="number" id="question" name="question" min="0" max="99" value="0" class="form-control input-lg">
 					<span class="input-group-addon">分</span>
 				</div>
 			</div>
